--- a/Happy.html
+++ b/Happy.html
@@ -193,13 +193,13 @@
 </div>
 <div class="birthday">
     <div class="current">
-        <span>2</span><span>1</span>
+        <span>2</span><span>4</span>
     </div>
     <span class="plus">&</span>
     <div class="frontend">
         <span class="frontend-text">2</span>
     </div>
-    <div class="final">Happy <span>Birthday <br>Radhika</span></div>
+    <div class="final">Happy <span>Birthday <br>Komal</span></div>
 </div>
 <span class="fa fa-birthday-cake"></span>
 <script src='https://static.codepen.io/assets/common/stopExecutionOnTimeout-de7e2ef6bfefd24b79a3f68b414b87b8db5b08439cac3f1012092b2290c719cd.js'></script>
